Started test for AWS Resource Locator;

--- a/test-conf/settings.arl.cfg
+++ b/test-conf/settings.arl.cfg
@@ -31,9 +31,8 @@ backend_vcl_path = backend.vcl
 
 
 [resource-locator]
-#module_name = elasticd.ext.aws_resource_locator
-#plugin_class = AWSinstanceLocator
+module_name = elasticd.ext.aws_resource_locator
+plugin_class = AWSinstanceLocator
 
-module_name = elasticd.ext.mock_resource_locator
-plugin_class = MockResourceLocator
-
+aws_tag_SDLC = DEV
+aws_tag_role = fnrw-app
